--- a/group_project_report.ipynb
+++ b/group_project_report.ipynb
@@ -594,6 +594,8 @@
     }
    ],
    "source": [
+    "##asdf\n",
+    "\n",
     "library(tidyverse)\n",
     "library(tidymodels)\n",
     "library(readxl)\n",
