Added Intro and Method Markdown Sections
see above

--- a/group_project_report.ipynb
+++ b/group_project_report.ipynb
@@ -77,6 +77,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSCI 100 005 - Group 21 \n",
+    "\n",
+    "Avery Chan, Rishabh Ghanty, Youjung Kim, Jagathi Moturi\n",
+    "\n",
+    "**Title:**\n",
+    "------\n",
+    "\n",
+    "Predicting Student Knowledge Level based on Study Time and Exam Performance\n",
+    "\n",
+    "\n",
+    "**Introduction:**\n",
+    "------\n",
+    "\n",
+    "The knowledge levels of students is a difficult, abstract value to measure due to its complexity and variability. Two possible metrics that have been used to indicate knowledge level include exam performance and the amount of time studying, but both have large variations depending on the person.\n",
+    "Using a program to predict the knowledge level of a student could help educators in adapting teaching methods to optimize resources in increasing knowledge level. It can also be used by students to self-assess their knowledge level based on their exam performance and study time.\n",
+    "\n",
+    "As such, our project seeks to determine: \n",
+    "\n",
+    "**Can a program accurately classify a student’s knowledge level based solely on their study time and exam performance?**\n",
+    "\n",
+    "\n",
+    "We will be using the User Knowledge Modelling dataset from the UCI Machine Learning Repository. This data set describes the knowledge levels of students on Electrical DC machines and different statistics about them (e.g. how long they studied).\n",
+    "\n",
+    "Stored as an Excel sheet (.xls), the data file has three sheets: ‘Information’ (metadata and relevant facts), ‘Training_Data’, and ‘Test_Data’.\n",
+    "\n",
+    "Each of the actual data sheets has 6 columns: STG, SCG, STR, LPR, PEG, UNS. The first five columns are statistics for each student (e.g. exam performance), and have been already standardized on a scale from 0 to 1. The last column (UNS) is a string that labels the knowledge level of the student (from Very Low to High). A detailed description of the attributes in the data set which were used in the model are as follows:\n",
+    "\n",
+    "* STG : The degree of study time of the user on the target subject (input value)\n",
+    "* PEG : The exam performance of user on the target subject (input value)\n",
+    "* UNS : The knowledge level of the user. (target value)\n",
+    "\n",
+    "The count of each label in the training set is: \n",
+    "\n",
+    "* Very Low: 50\n",
+    "* Low:129\n",
+    "* Middle: 122\n",
+    "* High: 130"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Methods & Results:**\n",
+    "----------\n",
+    "\n",
+    "We used classification techniques and the k-nearest neighbors algorithm to predict knowledge level categories for observations in our testing data set based on the user’s study time and exam performance. A training data set as well as a testing data set were already available to us within the original User Knowledge Excel sheet, which we used to train and test our classifier, respectively. The predictors we decided were Study Time and Exam Performance. A step by step procedure of our methods and analysis is as follows:\n",
+    "\n",
+    "**Part 1: Loading Training Data and Preliminary Analysis**\n",
+    "\n",
+    "1. First, the training data was read from the original source Excel sheet using the read_excel function specifying the sheet, range of rows, and column numbers. \n",
+    "\n",
+    "2. The data was cleaned and wrangled by giving the columns interpretable and readable labels, and the Knowledge.Level column was turned into a factor of very_low, Low, Middle, and High (Table 1).\n",
+    "\n",
+    "3. After tidying the data, some useful statistics of the training data were found:\n",
+    "* The means of predictor variables (Study Time Goal, Repetition Goal, Exam Performance Goal) (Table 2) were found by selecting the three columns and using `map_df` to find the means across all three.\n",
+    "* The number of observations of the target variable in the training data (Table 3) were found by using `group_by` on Knowledge.Level (the target variable) and `summarize`\n",
+    "* The number of rows with missing values (Table 4) were found by summing the values that were found to be missing using `is.na`. However, none were found. As such, it can be inferred that all the rows have values and there are no missing values.\n",
+    "\n",
+    "4. Next, the data was visualized in a scatterplot to find the relationship between Study Time and Exam Performance, coloured by Knowledge Level to get a general idea of the relationship between our predictor variables and how they affect the target variable. (Figure 1)\n",
+    "\n",
+    "\n",
+    "**Part 2: Loading Testing Data and Tuning for Best k Value With the Training Data**\n",
+    "\n",
+    "6. The testing data was loaded and was tidied exactly like the training data, renaming the columns and changing Knowledge.Level to a factor.\n",
+    "\n",
+    "7. However, the testing data’s Knowledge.Level column used “Very Low” instead of “very_low”, like the training data. As such, the testing Knowledge.Level was converted into a character using `as.character`, and all the instances of “Very Low” were changed to “very_low”. Then, the column was changed back to a factor with `as_factor`.\n",
+    "\n",
+    "8. Then, a recipe was created which sought to predict Knowledge.Level based on Study.Time and Exam.Performance. It also standardized and centered the data. (Figure 2)\n",
+    "\n",
+    "9. In addition, an engine was created that used a rectangular weighing function and a kknn (K- nearest neighbours) classification model.`tune()` was selected for the neighbors value to find the optimal k value later on.\n",
+    "\n",
+    "10. Next, in a `workflow`, `tune_grid` was used to find the predictions of the training data using different k values. The tested k values were a sequence from 1 to 50, skipping 2 (25 k values tested total). The accuracy of the predictions with each of these k values were analyzed using `collect_metrics`, before being appended to the training data and sorted descendingly by the accuracy. (Table 6) The k value which gave the highest accuracy was then pulled. (optimal_neighbor)\n",
+    "\n",
+    "11. Lastly, the k value was plotted against accuracy. In effect, this visualized the accuracy estimate for each k value in a line and point graph. (Figure 3)\n",
+    "\n",
+    "\n",
+    "**Part 3: Predicting Testing Data With the Optimal k Value**\n",
+    "\n",
+    "13. A new engine was created with the same parameters as before, but with the optimal k Value of 5.\n",
+    "\n",
+    "14. After creating the engine, a new workflow was created with the previous recipe and the new engine. The training data was then fit to this new workflow.\n",
+    "\n",
+    "15. Next, the classifier was used to predict the Knowledge.Level in the testing data set. These predictions were then bound to the testing data (Table 7)\n",
+    "\n",
+    "16. Then, the accuracy of the classifier was found using the metrics function to find the accuracy of the model on the testing data. (Table 8)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
